--- a/src/app.css
+++ b/src/app.css
@@ -12,7 +12,9 @@ body {
   --accent: #EE6666;
   --accent-transparent: #EE666622;
   --font-color: #333333;
-  --gray: #666666;
+  --gray: #CCCCCC;
+  --font-gray: #666666;
+  --background: #FFFFFF;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   color: var(--font-color);
 }
@@ -44,6 +46,21 @@ a:hover {
 
 a:visited {
   color: var(--accent);
+}
+
+button, .button {
+  padding: 0.5em 1em;
+  border: 1px solid var(--gray);
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-size: 1em;
+  background: none;
+}
+
+button.primary, .button.primary {
+  background: var(--accent);
+  border: none;
+  color: #FFFFFF;
 }
 
 h1 {
