--- a/src/app.css
+++ b/src/app.css
@@ -63,6 +63,13 @@ button.primary, .button.primary {
   color: #FFFFFF;
 }
 
+input {
+  padding: 0.5em;
+  border: 1px solid var(--gray);
+  border-radius: 0.5rem;
+  font-size: 1em;
+}
+
 h1 {
   font-size: 4em;
   font-weight: 700;
