--- a/src/app.css
+++ b/src/app.css
@@ -16,8 +16,19 @@ body {
   --gray: #CCCCCC;
   --font-gray: #666666;
   --background: #FFFFFF;
+  color-scheme: light dark;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  background-color: var(--background);
   color: var(--font-color);
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    --font-color: #DDDDDD;
+    --gray: #3A3A3A;
+    --font-gray: #BBBBBB;
+    --background: #161616;
+  }
 }
 
 #app {
@@ -75,6 +86,7 @@ input {
   border: 1px solid var(--gray);
   border-radius: 0.5rem;
   font-size: 1em;
+  background: none;
 }
 
 input:invalid {
