--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,7 @@ html, body, #app {
   margin: 0;
   padding: 0;
   height: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -29,11 +30,6 @@ body {
     --font-gray: #BBBBBB;
     --background: #161616;
   }
-}
-
-#app {
-  overflow: auto;
-  padding: 1rem;
 }
 
 .visually-hidden {
