--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   outline-color: var(--accent);
+  -webkit-tap-highlight-color: transparent;
 }
 
 html, body, #app {
